<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_kit_bag"
        android:icon="@drawable/ic_kit_bag_01"
        android:title="@string/kit_bag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_actions"
        android:icon="@drawable/ic_actions"
        android:title="Actions"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alerts"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/alerts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_offline_queue"
        android:icon="@drawable/ic_offline_queue_01"
        android:title="Offline Queue"
        app:showAsAction="ifRoom" />
</menu>