<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/depotnet_color">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/material_type"
        android:textColor="@color/white"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textColor="@color/white"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/question_done"
        android:textColor="@color/white"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"/>



</LinearLayout>