<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/_300sdp"
    android:background="@color/bg_white"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/txtTitle"
        android:layout_margin="@dimen/_6sdp"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:textColor="@color/depotnet_color"
        android:text="@string/error"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:background="@color/depotnet_color"/>

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/_16sdp"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/txt_color_dark"
        android:hint="@string/search"
        android:textColorHint="@color/txt_color_light_grey"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/btn_backgorund"
        android:text="@string/ok"
        android:textColor="@color/white" />

</LinearLayout>