<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red_disclaimer"
    android:minWidth="@dimen/_256sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/_12sdp"
        android:text="@string/disclaimer_warning"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:text="@string/you_must"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/tvMessage1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:text="@string/disc_line1"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/tvMessage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:text="@string/disc_line2"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/tvMessage3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/_12sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:text="@string/disc_line3"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/yellow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:text="Decline"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="Accept"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/blue"/>

    </RelativeLayout>

</LinearLayout>