<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_home_bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:background="@color/depotnet_color">



    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/ll_btn_pen"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_pen"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            app:srcCompat="@drawable/ic_baseline_brush"
            android:tint="@color/white"/>

        <TextView
            android:id="@+id/txt_pen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:maxLines="1"
            android:textSize="@dimen/_8sdp"
            android:text="@string/pen"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_text"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_text"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            app:srcCompat="@drawable/ic_baseline_text_fields"
            android:tint="@color/white"/>

        <TextView
            android:id="@+id/txt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:maxLines="1"
            android:textSize="@dimen/_8sdp"
            android:text="@string/text"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_select"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="visible"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_select"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            app:srcCompat="@drawable/ic_baseline_touch"
            android:tint="@color/white"/>

        <TextView
            android:id="@+id/txt_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:maxLines="1"
            android:textSize="@dimen/_8sdp"
            android:text="@string/select"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_eclipse"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_eclipse"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            app:srcCompat="@drawable/ic_baseline_radio_button_unchecked"
            android:tint="@color/white"/>

        <TextView
            android:id="@+id/txt_eclipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:maxLines="1"
            android:textSize="@dimen/_8sdp"
            android:text="@string/eclipse"
            android:textColor="@color/white"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_btn_line"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_line"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                app:srcCompat="@drawable/ic_baseline_minimize"
                android:tint="@color/white"/>

            <TextView
                android:id="@+id/txt_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:maxLines="1"
                android:textSize="@dimen/_8sdp"
                android:text="@string/line"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_btn_square"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_square"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                app:srcCompat="@drawable/ic_baseline_crop_square"
                android:tint="@color/white"/>

            <TextView
                android:id="@+id/txt_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:maxLines="1"
                android:textSize="@dimen/_8sdp"
                android:text="@string/square"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_btn_arrow"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_arrow"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                app:srcCompat="@drawable/ic_baseline_arrow_upward"
                android:tint="@color/white"/>

            <TextView
                android:id="@+id/txt_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:maxLines="1"
                android:textSize="@dimen/_8sdp"
                android:text="@string/arrow"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    </HorizontalScrollView >
</LinearLayout>