<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/depotnet_color">

        <TextView
            android:id="@+id/txt_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_72sdp"
        android:background="@color/bg_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingTop="@dimen/_48sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reset_your_password"
            android:textColor="@color/depotnet_color"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/reset_message"
            android:textColor="@color/txt_color_dark"
            android:textSize="@dimen/_14sdp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/et_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                app:srcCompat="@drawable/ic_user"
                android:tint="@color/depotnet_color" />

            <EditText
                android:id="@+id/et_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:textColor="@color/txt_color_dark"
                android:textColorHint="@color/txt_color_light_grey"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/btn_backgorund"
            android:text="@string/reset_your_password"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/txt_btn_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/go_back_to_login"
            android:textColor="@color/txt_color_light_grey"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_48sdp"
        app:srcCompat="@drawable/icon_login" />

    <LinearLayout
        android:id="@+id/ll_ui_blocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        android:background="@color/transparent_overlay"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>